Fix width with tag letter display.
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@5806 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -330,6 +330,8 @@ ul#fullTagCloud {
 .tagLevel2 { font-size:100%; }
 .tagLevel1 { font-size:80%; }
 
+#theTagsPage fieldset.tagLetter { width:181px; }
+
 /* others */
 .pleaseNote {
 	margin: 20px auto;
