Add edit icon. Change padding for image comment.
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@5975 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -112,6 +112,10 @@ BODY#thePicturePage,BODY#theCategoryPage, BODY#theTagsPage {}
   border: 1px solid #aaa;
 }
 
+#theImage p {
+  padding: 20px;
+}
+
 #imageHeaderBar H2 { 
 	border: none;
 	clear: both;
