compatibility with Piwigo 2.2
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@10744 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -395,3 +395,13 @@ TD.calDayCellEmpty { color: silver; }
 
 /* About page */
 #piwigoAbout UL { margin: 15px 0; }
+
+
+A:hover .pwg-icon {
+  background-image: url(icon/icons_sprite_hover.png);
+}
+
+.pwg-icon {
+  background-image: url(icon/icons_sprite.png);
+}
+
