cleaner icon for tag removal in the breadcrumb browsing path
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@10775 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -403,3 +403,5 @@ A:hover .pwg-icon {
   background-image: url(icon/icons_sprite.png);
 }
 
+.browsePath .button {margin-left:2px}
+h2 .button {margin-left:2px;margin-bottom:2px}
