compatibility with Piwigo 2.4
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@17137 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -42,7 +42,6 @@ BODY#thePicturePage,BODY#theCategoryPage, BODY#theTagsPage {}
 #the_page {
 	width: 940px;
 	margin: 0 auto;
-	position: relative;
 	background: transparent url(img/background.jpg) repeat-y top center;
 }
 
@@ -54,6 +53,7 @@ BODY#thePicturePage,BODY#theCategoryPage, BODY#theTagsPage {}
 	background: transparent url(img/header.jpg) no-repeat center bottom;
 	height: 200px;
 	margin: 0 auto;
+	position:relative;
 }
 
 #theHeader h1 { 
@@ -124,6 +124,10 @@ BODY#thePicturePage,BODY#theCategoryPage, BODY#theTagsPage {}
 #imageHeaderBar .browsePath a { color:#0066CC; text-decoration: none; }
 #imageHeaderBar .browsePath a:hover { color:#333333; }
 
+#imageToolBar .imageNumber {
+  margin-top: -30px;
+}
+
 .infoTable{ margin: 20px auto; }
 #linkPrev{ margin: 20px 0 0 20px; }
 #linkNext{ margin: 20px 20px 0 0;}
@@ -146,12 +150,7 @@ textarea { width: 100%; }
 /*	miniatures
 -----------------------------------------------------------------------------------------------*/
 .content UL.thumbnails SPAN, .content UL.thumbnails SPAN.wrap2 A,
-.content UL.thumbnails SPAN.wrap2 LABEL, .content DIV.thumbnailCategory DIV.illustration {
-  width: 155px;			/* max thumbnail width + 2px */
-}
-.content ul.thumbnails span.wrap2{ width: 172px; height:150px; }
-.content DIV.thumbnailCategory DIV.description { height: 100px; }		/* max thumbnail height + 2px */
-.content DIV.thumbnailCategory DIV.illustration img { height: 96px; }
+
 .content DIV.thumbnailCategory DIV.illustration a:hover { border:0; }
 
 .content DIV.comment BLOCKQUOTE {
@@ -179,7 +178,7 @@ textarea { width: 100%; }
 -----------------------------------------------------------------------------------------------*/
 
 #menubar { position: relative; z-index: 2; }
-.content { position: relative; z-index: 1; }
+.content { z-index: 1; }
 
 .content div.thumbnailCategory div.description {
 	overflow: hidden; /* bug in FF 1.0 (not 1.5) */
@@ -405,3 +404,23 @@ A:hover .pwg-icon {
 
 .browsePath .button {margin-left:2px}
 h2 .button {margin-left:2px;margin-bottom:2px}
+
+#thePicturePage #derivativeSwitchLink {display:none;}
+
+.switchBox, #languageSwitchBox {
+  background-color: #fff !important;
+  border: 1px solid #ccc !important;
+  border-radius:0 !important;
+}
+
+.switchBoxTitle, #languageSwitchBox .switchBoxTitle {
+  border-bottom:1px solid #ccc !important;
+}
+
+#languageSwitchBox a {
+  color: #000 !important;
+}
+
+#languageSwitchBox a:hover {
+  color: #0066CC !important;
+}
