bug fixed: correct display of the "filter recent photos" icon in the menubar
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@17140 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -194,7 +194,7 @@ textarea { width: 100%; }
 }
 
 /* Filter button */
-#menubar .button { position: absolute; left:95%;} 
+#menubar .button {float:right;} 
 #menubar P, #menubar P.totalImages{ clear: both; margin: 0; text-align: center; padding: 0.2em }
 
 /* set menubar height (not for IE) */
