bug fixed: no margin when menubar is displayed on picture.php
git-svn-id: http://piwigo.org/svn/extensions/montblancxl@18646 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -407,6 +407,7 @@ A:hover .pwg-icon {
 h2 .button {margin-left:2px;margin-bottom:2px}
 
 #thePicturePage #derivativeSwitchLink {display:none;}
+#thePicturePage .contentWithMenu {margin-left:0;}
 
 .switchBox, #languageSwitchBox {
   background-color: #fff !important;
